fix coverart gallery spacing

--- a/styles.css
+++ b/styles.css
@@ -246,10 +246,14 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    width: 300px;
+    height: 300px;
+
+    max-width: 80%;
 }
 
 .coverart {
-    max-width: 80%;
     transition: 0.2s;
 }
 
